--- a/src/sections/CTF.astro
+++ b/src/sections/CTF.astro
@@ -76,6 +76,6 @@ import CTFLogo from "../assets/icons/CTFLogo.astro";
   />
 </Section>
 
-<div class="bg-slate-50 z-90">
+<div class="bg-slate-50">
   <IncibeLogos class="container" />
 </div>
